fixed some responsiv grid with ant designs own grid system and added overflow auto

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 
 body {
   font-family: 'Poppins', 'Montserrat', sans-serif;
+  overflow-y: auto;
+  overflow-x: auto;
 }
 
 body,
